# nextbot

./: .gitignore  README.md  body.py  bot.py  main.py  pyproject.toml  setting.json
cmds/: badapple.py  event.py  main.py  music.py  music.py.old.old  react.py  slash.py  tasks.py
cogs/: badapple.py  component.py  event.py  main.py  music.py  osu.py  reactionrole.py  setting.py  shorturl.py  slash.py  tasks.py  voiceroom.py
core/: classes.py  database.py  error.py  slash.py
files/: convert.py
